tests/baselines/reference/giant.errors.txt
giant.ts(23,12): error TS2300: Duplicate identifier 'pgF'.
giant.ts(24,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(24,20): error TS1005: '{' expected.
giant.ts(25,12): error TS2300: Duplicate identifier 'psF'.
giant.ts(26,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(26,29): error TS1005: '{' expected.
giant.ts(27,13): error TS2300: Duplicate identifier 'rgF'.
giant.ts(28,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(28,21): error TS1005: '{' expected.
giant.ts(29,13): error TS2300: Duplicate identifier 'rsF'.
giant.ts(30,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(30,30): error TS1005: '{' expected.
giant.ts(33,12): error TS2300: Duplicate identifier 'tsF'.
giant.ts(34,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(34,29): error TS1005: '{' expected.
giant.ts(35,12): error TS2300: Duplicate identifier 'tgF'.
giant.ts(36,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(36,20): error TS1005: '{' expected.
giant.ts(62,5): error TS1021: An index signature must have a type annotation.
giant.ts(63,6): error TS1096: An index signature must have exactly one parameter.
giant.ts(76,5): error TS2386: Overload signatures must all be optional or required.
giant.ts(87,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(88,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(88,24): error TS1005: '{' expected.
giant.ts(89,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(90,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(90,33): error TS1005: '{' expected.
giant.ts(91,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(92,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(92,25): error TS1005: '{' expected.
giant.ts(93,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(94,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(94,34): error TS1005: '{' expected.
giant.ts(97,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(98,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(98,33): error TS1005: '{' expected.
giant.ts(99,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(100,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(100,24): error TS1005: '{' expected.
giant.ts(126,9): error TS1021: An index signature must have a type annotation.
giant.ts(127,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(140,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(154,39): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(166,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(167,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(167,24): error TS1005: '{' expected.
giant.ts(168,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(169,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(169,33): error TS1005: '{' expected.
giant.ts(170,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(171,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(171,25): error TS1005: '{' expected.
giant.ts(172,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(173,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(173,34): error TS1005: '{' expected.
giant.ts(176,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(177,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(177,33): error TS1005: '{' expected.
giant.ts(178,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(179,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(179,24): error TS1005: '{' expected.
giant.ts(205,9): error TS1021: An index signature must have a type annotation.
giant.ts(206,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(219,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(233,39): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(238,35): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(240,24): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(243,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(244,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(245,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(245,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(246,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(247,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(247,31): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(248,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(249,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(249,23): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(250,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(251,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(251,32): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(252,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(254,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(255,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(255,31): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(256,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(257,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(257,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(258,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(262,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(262,25): error TS1036: Statements are not allowed in ambient contexts.
giant.ts(267,30): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(281,12): error TS2300: Duplicate identifier 'pgF'.
giant.ts(282,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(282,20): error TS1005: '{' expected.
giant.ts(283,12): error TS2300: Duplicate identifier 'psF'.
giant.ts(284,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(284,29): error TS1005: '{' expected.
giant.ts(285,13): error TS2300: Duplicate identifier 'rgF'.
giant.ts(286,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(286,21): error TS1005: '{' expected.
giant.ts(287,13): error TS2300: Duplicate identifier 'rsF'.
giant.ts(288,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(288,30): error TS1005: '{' expected.
giant.ts(291,12): error TS2300: Duplicate identifier 'tsF'.
giant.ts(292,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(292,29): error TS1005: '{' expected.
giant.ts(293,12): error TS2300: Duplicate identifier 'tgF'.
giant.ts(294,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(294,20): error TS1005: '{' expected.
giant.ts(320,5): error TS1021: An index signature must have a type annotation.
giant.ts(321,6): error TS1096: An index signature must have exactly one parameter.
giant.ts(334,5): error TS2386: Overload signatures must all be optional or required.
giant.ts(345,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(346,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(346,24): error TS1005: '{' expected.
giant.ts(347,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(348,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(348,33): error TS1005: '{' expected.
giant.ts(349,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(350,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(350,25): error TS1005: '{' expected.
giant.ts(351,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(352,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(352,34): error TS1005: '{' expected.
giant.ts(355,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(356,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(356,33): error TS1005: '{' expected.
giant.ts(357,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(358,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(358,24): error TS1005: '{' expected.
giant.ts(384,9): error TS1021: An index signature must have a type annotation.
giant.ts(385,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(398,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(412,39): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(424,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(425,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(425,24): error TS1005: '{' expected.
giant.ts(426,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(427,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(427,33): error TS1005: '{' expected.
giant.ts(428,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(429,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(429,25): error TS1005: '{' expected.
giant.ts(430,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(431,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(431,34): error TS1005: '{' expected.
giant.ts(434,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(435,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(435,33): error TS1005: '{' expected.
giant.ts(436,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(437,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(437,24): error TS1005: '{' expected.
giant.ts(463,9): error TS1021: An index signature must have a type annotation.
giant.ts(464,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(477,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(491,39): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(496,35): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(498,24): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(501,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(502,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(503,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(503,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(504,20): error TS2300: Duplicate identifier 'pgF'.
giant.ts(505,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(505,31): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(506,20): error TS2300: Duplicate identifier 'psF'.
giant.ts(507,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(507,23): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(508,21): error TS2300: Duplicate identifier 'rgF'.
giant.ts(509,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(509,32): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(510,21): error TS2300: Duplicate identifier 'rsF'.
giant.ts(512,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(513,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(513,31): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(514,20): error TS2300: Duplicate identifier 'tsF'.
giant.ts(515,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(515,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(516,20): error TS2300: Duplicate identifier 'tgF'.
giant.ts(520,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(520,25): error TS1036: Statements are not allowed in ambient contexts.
giant.ts(525,30): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(532,31): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(534,20): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(537,17): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(538,18): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(539,12): error TS2300: Duplicate identifier 'pgF'.
giant.ts(539,18): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(540,16): error TS2300: Duplicate identifier 'pgF'.
giant.ts(541,12): error TS2300: Duplicate identifier 'psF'.
giant.ts(541,27): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(542,16): error TS2300: Duplicate identifier 'psF'.
giant.ts(543,13): error TS2300: Duplicate identifier 'rgF'.
giant.ts(543,19): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(544,17): error TS2300: Duplicate identifier 'rgF'.
giant.ts(545,13): error TS2300: Duplicate identifier 'rsF'.
giant.ts(545,28): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(546,17): error TS2300: Duplicate identifier 'rsF'.
giant.ts(548,17): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(549,12): error TS2300: Duplicate identifier 'tsF'.
giant.ts(549,27): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(550,16): error TS2300: Duplicate identifier 'tsF'.
giant.ts(551,12): error TS2300: Duplicate identifier 'tgF'.
giant.ts(551,18): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(552,16): error TS2300: Duplicate identifier 'tgF'.
giant.ts(556,18): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(556,21): error TS1036: Statements are not allowed in ambient contexts.
giant.ts(558,24): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(561,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(563,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(588,9): error TS1021: An index signature must have a type annotation.
giant.ts(589,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(602,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(606,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(606,25): error TS1036: Statements are not allowed in ambient contexts.
giant.ts(611,30): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(615,16): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
giant.ts(616,16): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
giant.ts(616,39): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(617,16): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
giant.ts(618,16): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
giant.ts(621,26): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(623,24): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(626,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(628,21): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(654,9): error TS1021: An index signature must have a type annotation.
giant.ts(655,10): error TS1096: An index signature must have exactly one parameter.
giant.ts(668,9): error TS2386: Overload signatures must all be optional or required.
giant.ts(672,22): error TS1183: An implementation cannot be declared in ambient contexts.
giant.ts(672,25): error TS1036: Statements are not allowed in ambient contexts.
giant.ts(676,30): error TS1183: An implementation cannot be declared in ambient contexts.


==== giant.ts (231 errors) ====
    /*
        Prefixes
        p -> public
        r -> private
        i -> import
        e -> export
        a -> ambient
        t -> static
        s -> set
        g -> get
    
        MAX DEPTH 3 LEVELS
    */
    const p = "propName";
    var V;
    function F() { };
    class C {
        constructor () { }
        public pV;
        private rV;
        public pF() { }
        private rF() { }
        public pgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
        public get pgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                       ~
!!! error TS1005: '{' expected.
        public psF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'psF'.
        public set psF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                ~
!!! error TS1005: '{' expected.
        private rgF() { }
                ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
        private get rgF()
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                        ~
!!! error TS1005: '{' expected.
        private rsF(param:any) { }
                ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
        private set rsF(param:any)
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                 ~
!!! error TS1005: '{' expected.
        static tV;
        static tF() { }
        static tsF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
        static set tsF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                ~
!!! error TS1005: '{' expected.
        static tgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
        static get tgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                       ~
!!! error TS1005: '{' expected.
    }
    interface I {
        //Call Signature
        ();
        (): number;
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
        //(p8?: string, ...p9: any[]);
        //(p10:string, p8?: string, ...p9: any[]);
        
        //Construct Signature
        new ();
        new (): number;
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    
        //Index Signature
        [p];
        [p1: string];
        ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
        [p2: string, p3: number];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
        //Property Signature
        p;
        p1?;
        p2?: string;
        
        //Function Signature
        p3();
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7(pa1, pa2): void;
        p7? (pa1, pa2): void;
        ~~
!!! error TS2386: Overload signatures must all be optional or required.
    }
    module M {
        var V;
        function F() { };
        class C {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                           ~
!!! error TS1005: '{' expected.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                    ~
!!! error TS1005: '{' expected.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                            ~
!!! error TS1005: '{' expected.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                     ~
!!! error TS1005: '{' expected.
            static tV;
            static tF() { }
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                    ~
!!! error TS1005: '{' expected.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                           ~
!!! error TS1005: '{' expected.
        }
        interface I {
            //Call Signature
            ();
            (): number;
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
                                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export declare class eaC { };
            export declare module eaM { };
        }
        export var eV;
        export function eF() { };
        export class eC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                           ~
!!! error TS1005: '{' expected.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                    ~
!!! error TS1005: '{' expected.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                            ~
!!! error TS1005: '{' expected.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                     ~
!!! error TS1005: '{' expected.
            static tV;
            static tF() { }
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                    ~
!!! error TS1005: '{' expected.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                           ~
!!! error TS1005: '{' expected.
        }
        export interface eI {
            //Call Signature
            ();
            (): number;
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
                                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export declare class eaC { };
            export declare module eaM { };
        }
        export declare var eaV;
        export declare function eaF() { };
                                      ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        export declare class eaC {
            constructor () { }
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pV;
            private rV;
            public pF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private rF() { }
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                  ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                   ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            static tV;
            static tF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                  ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
        }
        export declare module eaM {
            var V;
            function F() { };
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
                            ~
!!! error TS1036: Statements are not allowed in ambient contexts.
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
                                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }
    export var eV;
    export function eF() { };
    export class eC {
        constructor () { }
        public pV;
        private rV;
        public pF() { }
        private rF() { }
        public pgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
        public get pgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                       ~
!!! error TS1005: '{' expected.
        public psF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'psF'.
        public set psF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                ~
!!! error TS1005: '{' expected.
        private rgF() { }
                ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
        private get rgF()
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                        ~
!!! error TS1005: '{' expected.
        private rsF(param:any) { }
                ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
        private set rsF(param:any)
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                 ~
!!! error TS1005: '{' expected.
        static tV;
        static tF() { }
        static tsF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
        static set tsF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                ~
!!! error TS1005: '{' expected.
        static tgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
        static get tgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                       ~
!!! error TS1005: '{' expected.
    }
    export interface eI {
        //Call Signature
        ();
        (): number;
        (p);
        (p1: string);
        (p2?: string);
        (...p3: any[]);
        (p4: string, p5?: string);
        (p6: string, ...p7: any[]);
        //(p8?: string, ...p9: any[]);
        //(p10:string, p8?: string, ...p9: any[]);
        
        //Construct Signature
        new ();
        new (): number;
        new (p: string);
        new (p2?: string);
        new (...p3: any[]);
        new (p4: string, p5?: string);
        new (p6: string, ...p7: any[]);
    
        //Index Signature
        [p];
        [p1: string];
        ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
        [p2: string, p3: number];
         ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
        //Property Signature
        p;
        p1?;
        p2?: string;
        
        //Function Signature
        p3();
        p4? ();
        p5? (): void;
        p6(pa1): void;
        p7(pa1, pa2): void;
        p7? (pa1, pa2): void;
        ~~
!!! error TS2386: Overload signatures must all be optional or required.
    }
    export module eM {
        var V;
        function F() { };
        class C {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                           ~
!!! error TS1005: '{' expected.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                    ~
!!! error TS1005: '{' expected.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                            ~
!!! error TS1005: '{' expected.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                     ~
!!! error TS1005: '{' expected.
            static tV;
            static tF() { }
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                    ~
!!! error TS1005: '{' expected.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                           ~
!!! error TS1005: '{' expected.
        }
        interface I {
            //Call Signature
            ();
            (): number;
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
                                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export declare class eaC { };
            export declare module eaM { };
        }
        export var eV;
        export function eF() { };
        export class eC {
            constructor () { }
            public pV;
            private rV;
            public pF() { }
            private rF() { }
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                           ~
!!! error TS1005: '{' expected.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                    ~
!!! error TS1005: '{' expected.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                            ~
!!! error TS1005: '{' expected.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                     ~
!!! error TS1005: '{' expected.
            static tV;
            static tF() { }
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                    ~
!!! error TS1005: '{' expected.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                           ~
!!! error TS1005: '{' expected.
        }
        export interface eI {
            //Call Signature
            ();
            (): number;
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
            class C { };
            interface I { };
            module M { };
            export var eV;
            export function eF() { };
            export class eC { };
            export interface eI { };
            export module eM { };
            export declare var eaV;
            export declare function eaF() { };
                                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export declare class eaC { };
            export declare module eaM { };
        }
        export declare var eaV;
        export declare function eaF() { };
                                      ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        export declare class eaC {
            constructor () { }
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pV;
            private rV;
            public pF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private rF() { }
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public get pgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
            public psF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                                  ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public set psF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'psF'.
            private rgF() { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private get rgF()
                        ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
            private rsF(param:any) { }
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                                   ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            private set rsF(param:any)
                        ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
            static tV;
            static tF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static tsF(param:any) { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                                  ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static set tsF(param:any)
                       ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
            static tgF() { }
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static get tgF()
                       ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
        }
        export declare module eaM {
            var V;
            function F() { };
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
                            ~
!!! error TS1036: Statements are not allowed in ambient contexts.
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
                                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }
    export declare var eaV;
    export declare function eaF() { };
                                  ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    export declare class eaC {
        constructor () { }
                       ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        public pV;
        private rV;
        public pF() { }
                    ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        private rF() { }
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        public pgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        public get pgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'pgF'.
        public psF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'psF'.
                              ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        public set psF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'psF'.
        private rgF() { }
                ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
                      ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        private get rgF()
                    ~~~
!!! error TS2300: Duplicate identifier 'rgF'.
        private rsF(param:any) { }
                ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
                               ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        private set rsF(param:any)
                    ~~~
!!! error TS2300: Duplicate identifier 'rsF'.
        static tV;
        static tF() { }
                    ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        static tsF(param:any) { }
               ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
                              ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        static set tsF(param:any)
                   ~~~
!!! error TS2300: Duplicate identifier 'tsF'.
        static tgF() { }
               ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        static get tgF()
                   ~~~
!!! error TS2300: Duplicate identifier 'tgF'.
    }
    export declare module eaM {
        var V;
        function F() { };
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
                        ~
!!! error TS1036: Statements are not allowed in ambient contexts.
        class C {
            constructor () { }
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pV;
            private rV;
            public pF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static tV;
            static tF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
        interface I {
            //Call Signature
            ();
            (): number;
            (p: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        module M {
            var V;
            function F() { };
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
                            ~
!!! error TS1036: Statements are not allowed in ambient contexts.
            class C { }
            interface I { }
            module M { }
            export var eV;
            export function eF() { };
                                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export class eC { }
            export interface eI { }
            export module eM { }
            export declare var eaV
                   ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
            export declare function eaF() { };
                   ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
                                          ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export declare class eaC { }
                   ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
            export declare module eaM { }
                   ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
        }
        export var eV;
        export function eF() { };
                             ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        export class eC {
            constructor () { }
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            public pV;
            private rV;
            public pF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            static tV
            static tF() { }
                        ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
        export interface eI {
            //Call Signature
            ();
            (): number;
            (p);
            (p1: string);
            (p2?: string);
            (...p3: any[]);
            (p4: string, p5?: string);
            (p6: string, ...p7: any[]);
            //(p8?: string, ...p9: any[]);
            //(p10:string, p8?: string, ...p9: any[]);
        
            //Construct Signature
            new ();
            new (): number;
            new (p: string);
            new (p2?: string);
            new (...p3: any[]);
            new (p4: string, p5?: string);
            new (p6: string, ...p7: any[]);
    
            //Index Signature
            [p];
            [p1: string];
            ~~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    
            //Property Signature
            p;
            p1?;
            p2?: string;
        
            //Function Signature
            p3();
            p4? ();
            p5? (): void;
            p6(pa1): void;
            p7(pa1, pa2): void;
            p7? (pa1, pa2): void;
            ~~
!!! error TS2386: Overload signatures must all be optional or required.
        }
        export module eM {
            var V;
            function F() { };
                         ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
                            ~
!!! error TS1036: Statements are not allowed in ambient contexts.
            class C { }
            module M { }
            export var eV;
            export function eF() { };
                                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
            export class eC { }
            export interface eI { }
            export module eM { }
        }
    }